# CMakeSeries

./: README.md
Ep002/src/: CMakeLists.txt  main.cpp
Ep005/: CMakeLists.txt  main.cpp
Ep005/include/: add_func.h
Ep007/: CMakeLists.txt  inf.txt  main.cpp
Ep007/include/: Animal.h  add_func.h
Ep007/src/: Animal.cpp  add_func.cpp  log.cpp
